syntax = "proto3";
package assetmantle.schema.properties.base;

import "ids/base/property_id.proto";
import "ids/base/data_id.proto";
import "gogoproto/gogo.proto";

message MesaProperty {
  option (gogoproto.goproto_getters) = false;

  ids.base.PropertyID i_d = 1;
  ids.base.DataID data_i_d = 2;
}